potentially fixes single channel image url

--- a/premium-business-music/chart-toppers/index.html
+++ b/premium-business-music/chart-toppers/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_640x0_resize_q70_linear.jpg 768w,
-                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_768x0_resize_q70_linear.jpg 1024w,
-                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg 1920w,
-                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_2048x0_resize_q70_linear.jpg 2x,
-                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_3072x0_resize_q70_linear.jpg 3x,
-                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_4096x0_resize_q70_linear.jpg 4x
+                ../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_640x0_resize_q70_linear.jpg 768w,
+                ../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_768x0_resize_q70_linear.jpg 1024w,
+                ../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg 1920w,
+                ../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
+            src="../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img "
+            id="playerCover" />
 
             
                 <figcaption class="text-tiny">
