--- a/premium-business-music/radio-mix/index.html
+++ b/premium-business-music/radio-mix/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_640x0_resize_q70_linear.jpg 768w,
-                /premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_768x0_resize_q70_linear.jpg 1024w,
-                /premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_1366x0_resize_q70_linear.jpg 1920w,
-                /premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_2048x0_resize_q70_linear.jpg 2x,
-                /premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_3072x0_resize_q70_linear.jpg 3x,
-                /premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_4096x0_resize_q70_linear.jpg 4x
+                ../../premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_640x0_resize_q70_linear.jpg 768w,
+                ../../premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_768x0_resize_q70_linear.jpg 1024w,
+                ../../premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_1366x0_resize_q70_linear.jpg 1920w,
+                ../../premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
+            src="../../premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img "
+            id="playerCover" />
 
             
                 <figcaption class="text-tiny">
