--- a/starter-business-music/fresh-and-trendy/index.html
+++ b/starter-business-music/fresh-and-trendy/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_640x0_resize_q70_linear.jpg 768w,
-                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_768x0_resize_q70_linear.jpg 1024w,
-                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg 1920w,
-                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_2048x0_resize_q70_linear.jpg 2x,
-                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_4096x0_resize_q70_linear.jpg 4x
+                ../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_640x0_resize_q70_linear.jpg 768w,
+                ../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_768x0_resize_q70_linear.jpg 1024w,
+                ../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg 1920w,
+                ../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+            src="../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img starter"
+            id="playerCover" />
 
             
         </figure>
