--- a/starter-business-music/index.html
+++ b/starter-business-music/index.html
@@ -294,7 +294,7 @@
                                                 ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_640x0_resize_q70_linear.jpg 768w,
                                                 ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_768x0_resize_q70_linear.jpg 1024w,
                                                 ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg 1080w,
-                                                ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_2048x0_resize_q70_linear.jpg 2x,
+                                                ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_2048x0_resize_q70_linear.jpg 2x
                                                 "
                                             src="../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -497,7 +497,7 @@
                                                 ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_640x0_resize_q70_linear.jpg 768w,
                                                 ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_768x0_resize_q70_linear.jpg 1024w,
                                                 ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg 1080w,
-                                                ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_2048x0_resize_q70_linear.jpg 2x,
+                                                ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_2048x0_resize_q70_linear.jpg 2x
                                                 "
                                             src="../starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -620,7 +620,7 @@
                                                 ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_640x0_resize_q70_linear.jpg 768w,
                                                 ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_768x0_resize_q70_linear.jpg 1024w,
                                                 ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg 1080w,
-                                                ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_2048x0_resize_q70_linear.jpg 2x,
+                                                ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_2048x0_resize_q70_linear.jpg 2x
                                                 "
                                             src="../starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -695,7 +695,7 @@
                                                 ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_640x0_resize_q70_linear.jpg 768w,
                                                 ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_768x0_resize_q70_linear.jpg 1024w,
                                                 ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg 1080w,
-                                                ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x,
+                                                ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x
                                                 "
                                             src="../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -796,7 +796,7 @@
                                                   ..//starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
@@ -995,7 +995,7 @@
                                                   ..//starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
@@ -1075,7 +1075,7 @@
                                                   ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
@@ -1159,7 +1159,7 @@
                                                   ..//starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
@@ -1258,7 +1258,7 @@
                                                   ..//starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
@@ -1333,7 +1333,7 @@
                                                   ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
@@ -1470,7 +1470,7 @@
                                                   ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
@@ -1552,7 +1552,7 @@
                                                   ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_640x0_resize_q70_linear.jpg 768w,
                                                   ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_768x0_resize_q70_linear.jpg 1024w,
                                                   ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg 1080w,
-                                                  ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x,
+                                                  ..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x
                                                   "
                                               src="..//starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg">
                                             <figcaption>
