--- a/starter-business-music/indie-days/index.html
+++ b/starter-business-music/indie-days/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_640x0_resize_q70_linear.jpg 768w,
-                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_768x0_resize_q70_linear.jpg 1024w,
-                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg 1920w,
-                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_2048x0_resize_q70_linear.jpg 2x,
-                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_4096x0_resize_q70_linear.jpg 4x
+                ../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_640x0_resize_q70_linear.jpg 768w,
+                ../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_768x0_resize_q70_linear.jpg 1024w,
+                ../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg 1920w,
+                ../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+            src="../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img starter"
+            id="playerCover" />
 
             
         </figure>
