--- a/starter-business-music/jazz-classics/index.html
+++ b/starter-business-music/jazz-classics/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_640x0_resize_q70_linear.jpg 768w,
-                /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_768x0_resize_q70_linear.jpg 1024w,
-                /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg 1920w,
-                /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_2048x0_resize_q70_linear.jpg 2x,
-                /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_4096x0_resize_q70_linear.jpg 4x
+                ../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_640x0_resize_q70_linear.jpg 768w,
+                ../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_768x0_resize_q70_linear.jpg 1024w,
+                ../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg 1920w,
+                ../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+            src="../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img starter"
+            id="playerCover" />
 
             
         </figure>
