--- a/starter-business-music/now-pop/index.html
+++ b/starter-business-music/now-pop/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_640x0_resize_q70_linear.jpg 768w,
-                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_768x0_resize_q70_linear.jpg 1024w,
-                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg 1920w,
-                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x,
-                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_4096x0_resize_q70_linear.jpg 4x
+                ../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_640x0_resize_q70_linear.jpg 768w,
+                ../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_768x0_resize_q70_linear.jpg 1024w,
+                ../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg 1920w,
+                ../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+            src="../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img starter"
+            id="playerCover" />
 
             
         </figure>
