--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                                     premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_640x0_resize_q70_linear.jpg 768w,
                                                     premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_768x0_resize_q70_linear.jpg 1024w,
                                                     premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_1366x0_resize_q70_linear.jpg 1080w,
-                                                    premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_2048x0_resize_q70_linear.jpg 2x,
+                                                    premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_2048x0_resize_q70_linear.jpg 2x
                                                     "
                                                 src="premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -279,7 +279,7 @@
                                                     premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_640x0_resize_q70_linear.jpg 768w,
                                                     premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_768x0_resize_q70_linear.jpg 1024w,
                                                     premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg 1080w,
-                                                    premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_2048x0_resize_q70_linear.jpg 2x,
+                                                    premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_2048x0_resize_q70_linear.jpg 2x
                                                     "
                                                 src="premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -417,7 +417,7 @@
                                                     premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_640x0_resize_q70_linear.jpg 768w,
                                                     premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_768x0_resize_q70_linear.jpg 1024w,
                                                     premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg 1080w,
-                                                    premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_2048x0_resize_q70_linear.jpg 2x,
+                                                    premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_2048x0_resize_q70_linear.jpg 2x
                                                     "
                                                 src="premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -493,7 +493,7 @@
                                                     premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_640x0_resize_q70_linear.jpg 768w,
                                                     premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_768x0_resize_q70_linear.jpg 1024w,
                                                     premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_1366x0_resize_q70_linear.jpg 1080w,
-                                                    premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_2048x0_resize_q70_linear.jpg 2x,
+                                                    premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_2048x0_resize_q70_linear.jpg 2x
                                                     "
                                                 src="premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -598,7 +598,7 @@
                                                     premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_640x0_resize_q70_linear.jpg 768w,
                                                     premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_768x0_resize_q70_linear.jpg 1024w,
                                                     premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_1366x0_resize_q70_linear.jpg 1080w,
-                                                    premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_2048x0_resize_q70_linear.jpg 2x,
+                                                    premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_2048x0_resize_q70_linear.jpg 2x
                                                     "
                                                 src="premium-business-music/radio-mix/radio-mix_hu63e03b1dd10cbdf51bdc48e88edc917d_2508903_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
@@ -714,7 +714,7 @@
                                                     premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_640x0_resize_q70_linear.jpg 768w,
                                                     premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_768x0_resize_q70_linear.jpg 1024w,
                                                     premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg 1080w,
-                                                    premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_2048x0_resize_q70_linear.jpg 2x,
+                                                    premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_2048x0_resize_q70_linear.jpg 2x
                                                     "
                                                 src="premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg">
                                           <figcaption>
