--- a/starter-business-music/mainstream-pop/index.html
+++ b/starter-business-music/mainstream-pop/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_640x0_resize_q70_linear.jpg 768w,
-                /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_768x0_resize_q70_linear.jpg 1024w,
-                /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg 1920w,
-                /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_2048x0_resize_q70_linear.jpg 2x,
-                /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_4096x0_resize_q70_linear.jpg 4x
+                ../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_640x0_resize_q70_linear.jpg 768w,
+                ../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_768x0_resize_q70_linear.jpg 1024w,
+                ../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg 1920w,
+                ../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+            src="../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img starter"
+            id="playerCover" />
 
             
         </figure>
