--- a/starter-business-music/young-and-free/index.html
+++ b/starter-business-music/young-and-free/index.html
@@ -59,14 +59,14 @@
               
           <img
             srcset="
-                starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_640x0_resize_q70_linear.jpg 768w,
-                /starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_768x0_resize_q70_linear.jpg 1024w,
-                /starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_1366x0_resize_q70_linear.jpg 1920w,
-                /starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_2048x0_resize_q70_linear.jpg 2x,
-                /starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_4096x0_resize_q70_linear.jpg 4x
+                ../../starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_640x0_resize_q70_linear.jpg 768w,
+                ../../starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_768x0_resize_q70_linear.jpg 1024w,
+                ../../starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_1366x0_resize_q70_linear.jpg 1920w,
+                ../../starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_2048x0_resize_q70_linear.jpg 2x,
             "
-            src="../../starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+            src="../../starter-business-music/young-and-free/young-and-free_hudf620e3dd06a03964c22c00fcae83ee0_1315102_1366x0_resize_q70_linear.jpg"
+            class="single-playlist-img starter"
+            id="playerCover" />
 
             
         </figure>
